grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice($._simple_statements, $._compound_statement),

    // -----------------------------------------------------------------------
    // Simple statements

    module_import_statement: $ =>
      seq('import', seq(trailingCommaSep1($._module_import))),

    _module_import: $ =>
      field(
        'module',
        choice(
          $.import,
          $.aliased_import,
          $.relative_import,
          $.relative_aliased_import,
        ),
      ),

    import: $ => $._import,
    aliased_import: $ => seq($._import, $._import_alias),
    _import: $ => field('name', $.dotted_identifier),
    _import_alias: $ => seq('as', field('alias', $.identifier)),

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,
    escaped_identifier: $ => seq('`', $.escaped_identifier_content, '`'),
