test/corpus/mojo/errors.txt
================================================================================
Import: relative imports must use `from`
================================================================================

import .a
import .b as c

--------------------------------------------------------------------------------

(module
  (module_import_statement
    (ERROR)
    (import
      (dotted_escaped_identifier
        (identifier))))
  (module_import_statement
    (ERROR)
    (aliased_import
      (dotted_escaped_identifier
        (identifier))
      (identifier))))

================================================================================
Identifier: escaped content does not allow vertical whitespace characters
or backticks
================================================================================

`key
    value`

`key`value`

``value``

--------------------------------------------------------------------------------

(module
  (ERROR)
  (identifier)
  (ERROR
    (identifier)
    (escaped_identifier
      (escaped_identifier_content))
    (identifier)
    (escaped_identifier
      (escaped_identifier_content))))
